# splits

./: .gitignore  Cargo.toml  config.toml.example
src/: commands.rs  config.rs  database.rs  discord.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  signals.rs  validation.rs
static/: index.html  script.js  style.css
